Sửa chữa và hoàn thiện lần 1

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 <body>
     <main>
         <!-- Header -->
-        <header class="header">
+        <header class="fixed-header">
             <div class="content">
+                <!-- navbar -->
                 <nav class="navbar">
                     <!-- logo -->
                     <img src="./assets/img/Logo.svg" alt="Besnik.">
@@ -42,7 +43,11 @@
                         <a href="#!" class="btn action-btn">Sign up</a>
                     </div>
                 </nav>
-
+            </div>
+        </header>
+        <!-- Hero -->
+        <div class="hero-wrap">
+            <div class="content">
                 <div class="hero">
                     <div class="info">
                         <p class="sub-title">Welcome to Besnik Agency</p>
@@ -61,7 +66,7 @@
                     class="hero-img">
                 </div>
             </div>
-        </header>
+        </div>
 
         <!-- Clients -->
         <div class="clients">
@@ -84,11 +89,36 @@
                     <p class="desc">5 Star Ratings (2k+ Review)</p>
                 </div>
                 <div class="images">
-                    <img src="./assets/img/clients-1.svg" alt="Clients 1">
-                    <img src="./assets/img/clients-2.svg" alt="Clients 2">
-                    <img src="./assets/img/clients-3.svg" alt="Clients 3">
-                    <img src="./assets/img/clients-4.svg" alt="Clients 4">
-                    <img src="./assets/img/clients-5.svg" alt="Clients 5">
+                    <a href="#!">
+                        <img
+                            src="./assets/img/clients-1.svg"
+                            alt="Client 1"
+                        />
+                    </a>
+                    <a href="#!">
+                        <img
+                            src="./assets/img/clients-2.svg"
+                            alt="Client 2"
+                        />
+                    </a>
+                    <a href="#!">
+                        <img
+                            src="./assets/img/clients-3.svg"
+                            alt="Client 3"
+                        />
+                    </a>
+                    <a href="#!">
+                        <img
+                            src="./assets/img/clients-4.svg"
+                            alt="Client 4"
+                        />
+                    </a>
+                    <a href="#!">
+                        <img
+                            src="./assets/img/clients-5.svg"
+                            alt="Client 5"
+                        />
+                    </a>
                 </div>
             </div>
         </div>
@@ -482,11 +512,7 @@
                     </div>
                 </div>
                 <div class="row row-bottom">
-                    <img
-                        src="./assets/img/logo.svg"
-                        alt="Besnik."
-                        class="logo"
-                    />
+                    <img src="./assets/img/Logo-2.svg" alt="Besnik">
                     <p class="copyright">
                         Copyright 2020.com, All rights reserved.
                     </p>
