--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                     </div>
                 </div>
                 <div class="row row-bottom">
-                    <img src="./assets/img/Logo-2.svg" alt="Besnik">
+                    <img src="./assets/img/Logo.svg" alt="Besnik">
                     <p class="copyright">
                         Copyright 2020.com, All rights reserved.
                     </p>
