--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <main>
+    <main id="home">
         <!-- Header -->
         <header class="fixed-header">
             <div class="content">
                 <!-- navbar -->
                 <nav class="navbar">
                     <!-- logo -->
-                    <img src="./assets/img/Logo.svg" alt="Besnik.">
+                    <a href="#home">
+                        <img src="./assets/img/Logo.svg" alt="Besnik.">
+                    </a>
 
                     <!-- Navigation -->
                     <ul>
-                        <li><a href="#!">Home</a></li>
-                        <li><a href="#!">Features</a></li>
-                        <li><a href="#!">Services</a></li>
-                        <li><a href="#!">Resources</a></li>
-                        <li><a href="#!">Contact</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#resources">Resources</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
 
                     <!-- Action -->
@@ -124,7 +126,7 @@
         </div>
 
         <!-- Guides -->
-        <div class="guides">
+        <div id="services" class="guides">
             <div class="content">
                 <h2 class="sub-title">How its works?</h2>
                 <p class="desc">
@@ -166,7 +168,7 @@
             </div>
         </div>
         <!-- Featured -->
-        <div class="featured">
+        <div id="features" class="featured">
             <div class="content">
                 <header>
                     <h2 class="sub-title">Featured Properties</h2>
@@ -307,7 +309,7 @@
         </div>
 
          <!-- Stats -->
-         <div class="stats">
+         <div id="resources" class="stats">
             <div class="content">
                 <div class="row">
                     <div class="img-block">
@@ -400,7 +402,7 @@
         </div>
 
         <!-- Subscription -->
-        <div class="subscription">
+        <div id="contact" class="subscription">
             <div class="content">
                 <div class="body">
                     <div class="info">
